--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "app/",
+            "Finizens\\": "src/"
         }
     },
     "autoload-dev": {
