--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+#controllers:
+#    resource:
+#        path: ../app/Finance/Portfolio/Controller/
+#        namespace: App\Finance\Portfolio\Controller
+#    type: attribute
