feat(database): Set up doctrine repository system

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,6 +2,7 @@ doctrine:
     dbal:
         driver: 'pdo_mysql'
         server_version: '8.0'
+        charset: UTF8
         url: '%env(resolve:DATABASE_URL)%'
 
         # IMPORTANT: You MUST configure your server version,
@@ -12,20 +13,18 @@ doctrine:
         use_savepoints: true
     orm:
         auto_generate_proxy_classes: true
-        enable_lazy_ghost_objects: true
-        report_fields_where_declared: true
-        validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
-                type: attribute
+            finance_portfolio:
+                mapping: true
+                type: xml
+                dir: "%kernel.project_dir%/src/Finance/Portfolio/Infrastructure/Persistence/Doctrine"
+                prefix: 'Finizens\Finance\Portfolio\Domain'
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
 
 when@test:
+        # namespace is arbitrary but should be different from App\Migrations
     doctrine:
         dbal:
             # "TEST_TOKEN" is typically set by ParaTest
