--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,8 +18,8 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests</directory>
+        <testsuite name="Test">
+            <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
 
