--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 APP_ENV=dev
 APP_SECRET=bb5d9317f96565b518c4f56e44c01311
 DATABASE_URL=mysql://root:secret@db:3306/finizens
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
