--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
     },
     "require-dev": {
         "dg/bypass-finals": "^1.7",
+        "fakerphp/faker": "^1.23",
         "friends-of-behat/mink-browserkit-driver": "^1.6",
         "friends-of-behat/mink-extension": "^2.7",
         "friends-of-behat/symfony-extension": "^2.5",
