--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,7 @@
         }
     },
     "require-dev": {
+        "behat/behat": "^3.14",
         "dg/bypass-finals": "^1.7",
         "fakerphp/faker": "^1.23",
         "friends-of-behat/mink-browserkit-driver": "^1.6",
