--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,6 +29,10 @@ services:
     Tests\Shared\Integration\Persistence\Doctrine\DoctrineRepositoryTestAggregateRootRepository:
         public: true
 
+    Finizens\Shared\Infrastructure\Symfony\EventListener\ExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
+
     _instanceof:
         Finizens\Shared\Application\MessageHandler\CommandHandler:
             tags:
